Profile TouchUps Fix Profile Mediaqueries and also the display. Make itinerary items align in underneath one another rather than squish into one another in flex.

--- a/client/src/components/ActivityList/ActivityList.css
+++ b/client/src/components/ActivityList/ActivityList.css
@@ -24,7 +24,7 @@
 .timeline {
   position: relative;
   max-width: 1200px;
-  margin-left: -10vw;
+  margin-left: 3vw;
 }
 
 /* The actual timeline (the vertical ruler) */
